Turned off all comments on old posts

--- a/_posts/2009-02-26-lent.md
+++ b/_posts/2009-02-26-lent.md
@@ -3,7 +3,7 @@ layout: post
 title: Lent
 date: 2009-02-26 13:52
 author: harvy
-comments: true
+comments: false
 categories: [Random]
 ---
 For Lent I have decided to give up my home computer. But what exactly does this mean? (As I need a computer for work)
