--- a/_posts/2013-04-14-qed-2013-day-1.md
+++ b/_posts/2013-04-14-qed-2013-day-1.md
@@ -3,7 +3,7 @@ layout: post
 title: QED 2013 - Day 1 breakfast
 date: 2013-04-14 20:42
 author: admin
-comments: true
+comments: false
 categories: [Atheism]
 ---
 Wow, that was a ram packed weekend. Let's start at the beginning.
