Draft for fringe fest

--- a/_drafts/2015-04-19-99-jobs-1-problem.md
+++ b/_drafts/2015-04-19-99-jobs-1-problem.md
@@ -5,7 +5,7 @@ comments: True
 ---
 
 <p class="message">
-This is a post with some stats and comments on my personal experiance through the UK job market.
+This is a post with some stats and comments on my personal experiance through the UK tech job market.
 </p>
 
 So I've decided to take the plunge and look for a new jobs. Here's some basic info about my last job hunt.
