--- a/_drafts/2015-08-17-fringe-2015.md
+++ b/_drafts/2015-08-17-fringe-2015.md
@@ -14,48 +14,25 @@ __Thursday Night drop ins__
 
 After driving up Thursday afternoon and a long walk from the train station we have finally arrived at our hotel. The evening started very shakily with some free shows, I figured we need something to whet the appetite.
 
-We saw two comedy shows and a theatre show.
+We saw two comedy shows and a theatre show, which was quite a bit for just a few hours.
 
+One was BattleActs! a copy of "Who's Line Is It Anyway" with 4 budding comedians. There was a lot of audience interaction and it worked well with the improv on show. Later in the same venue we saw our first comedy theatre, Oddity, this was a space themed (a big plus for me) 3 person theatre with some video. This combined Big Brother diary room moments, with some anti-gravity performing. A very good performance with few props and good use of video to break up the scenes.
 
+The end of the night was a walk down Cowgate, full of some interesting bars and the occasional teepee tent full of guitar-toting hippies. The highlight was a converted cowshed bar with a two piece jazz band.
 
-I'm surprised at how many people don't know what Fringe fest is. So a quick run down:
-* It a month long (-ish) festival in Edinburgh
-* It caters mainly to the arts. Although anyone could technically anything there
-* It's not in one place like a traditional festival. Basically all the venues in Edinburgh open up their doors to various events
+__Breakfast Whisky__
 
-So what did we see when we got there?
+The morning started
 
-First a little disclaimer, we did no planning beforehand. I tried.... really I did. I looked at the Fringe catalogue that was kindly donated to me from a friend at work but just flicking through the pages was quite daunting. It also didn't have reviews of the acts. It was literally like a classifieds. A small picture, a blurb, a date and a price. The more famous acts got bigger real estate but that just put me off.
+* Iolite
+* Up Your Game
+* The Heist
 
-I got mixed opinions on how we should tackle the fest, some say wing it, others say plan for the big events and just make up the rest. I went with the former but not out of choice. So a bit of technology came to the rescue and just instinct.
-
-We arrived in the early evening to our hotel (my god the hotel planning, that's another story). I then proceeded to download the fringe app, it had two important features: The "nearby now" icon. Basically a google map mashup with all the fringe locations near to you combined with the fact if they are playing right now. The other was a link to the half price ticket hut, this is similar to the TKTS office in Times Square, NY. Basically a ticket hut that sells half price ticket for performances on the same day and at some point on the next day. I assume to get as many bums on seats. Also around the ticket hut was a large square with various street performances. These were actually just as entertaining as the venue'd performances.
-
-So of course we just hit the hut first. We wanted to see something worth paying for, while standing around outside one of my friends managed to find an app that actually had user generated reviews of the performances from the fringe. I quickly combined the two, me looking at half price ticket hut LED scrolling board showing all the tickets for the day and my friend just reading out all best shows from his phone (in the background was a guy playing the most wonderful Spanish guitar with some immense finger plucking). We literally just took the first match we found, a comedy play called: Truth.
-
-__Truth__
-
-So we got to the venue without trouble (thanks iPhone app). Once inside getting to the right place was a bit of an issue. It dawned on me that these were pretty old buildings in Edinburgh, narrow stone staircases, twisting passages. Just this venue seemed like a castle. Yeah, I got lost.
-
-We found the room and queued outside. We were too late for the good seats. So we sat at the back. I regret that for most of the fringe I didn't take many photos or videos, so I got nothing for this play.
-
-Saying that it was easily the best play I had seen and I had not seen many plays, so my opinion is pretty much invalid from this point forward. The best I can compare it to was a play off-off Broadway (yes we were that cheap) called, "Channelling Kevin Spacey." Anyway this was a sole performer with some helping hands at the back. Essentially a very animated actor (aren't they all?) started off by telling people a simple story then descends into theatrical madness. It involves a plasma ball which is used to channel various spirits and people. I have to say his ability to change characters was astounding (still remembering my really good theatre review credentials? Good) very fast and fluid.
-
-__The free shit__
-
-Just putting this here to say we did see a lot of free comedy and I have rethink how the economy is going to work if the the free stuff is that bad. I mean seriously it was really, really bad. There was this one woman who ended up getting the audience to make her online dating profile. I'm pretty sure the title of this event had the word comedy in the title. Then again it had the word free and now those combined makes me hiss like a cat.
-
-__Leaving Limbo Landing__
-
-Ok look at this picture.
-
-![Yes! The tower had more meaning then this play.](/assets/tower.jpg)
-
-Do you understand what is going on here? Basically this picture represents what this play is about... Still not got it?
-
-Exactly because I didn't get it either. It was like a combination of taking heavy painkillers while someone is twisting your foot all the way around a full 360 degrees. You can see what is going on but you don't feel any of it then you ask yourself what the fuck is really going on? How can my foot do that and still be normal, at this point you don't even acknowledge the dance. Like seriously, how can my foot do that? Yes! What you are imagining about your foot is more interesting then this dance. What I am making up about your foot is more interesting and engaging.
-
-Now I did make this clear to a woman who was going around looking for feedback. I should've told her about the foot.
+* Book Fair
+* Leeds Comedy
+* A Capella
+* Jazz, Diane
+* Tripped
 
 __Bristol improv group__
 
