Trying to fix build failure

--- a/_posts/2015-08-17-fringe-2015.md
+++ b/_posts/2015-08-17-fringe-2015.md
@@ -6,7 +6,7 @@ comments: False
 
 We finally got back to the Edinburgh Fringe Festival after 3 years.
 
-First I'd recommend a quick look back at my [first visit]({% post_url 2013-09-07-my-fringe-fest %}), it gives a brief overview of what Fringe is and some of the stuff we did last time.
+First I'd recommend a quick look back at my first visit, it gives a brief overview of what Fringe is and some of the stuff we did last time.
 
 On to the shows themselves:
 
