Looks like iframes need to be on their own lines

--- a/_posts/2015-08-17-fringe-2015.md
+++ b/_posts/2015-08-17-fringe-2015.md
@@ -40,13 +40,18 @@ We were suitably lubricated and a bit more easy easy-going as to where we wanted
 
 Next up was the spoken word category. Now this was held in the smallest room I have been during Fringe (possibly ever), __Up Your Game__ was essentially a one man show which involved at one point walking around in underwear but the content was compelling.. for me anyway. It was a story of how through video games he managed to mitigate his frustrations about his sexuality and bullying in school, all rhymed and versed with the backing track of various musical game themes from the 80s to the 00s. Even as we walked in there was the main theme to Super Mario Bros. playing.
 This is a brilliant clip from one of his poems about Street Fighter lust. Warning: there is content here that will require 90's arcade gaming knowledge
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/U6Xs-0U8lbo?rel=0" frameborder="0" allowfullscreen></iframe> 
 
-In between getting tickets and heading up to our next show, we saw an ice skating show... with roller skates.. on concrete: <iframe width="560" height="315" src="https://www.youtube.com/embed/sFiBACVT4A8?rel=0" frameborder="0" allowfullscreen></iframe>
+In between getting tickets and heading up to our next show, we saw an ice skating show... with roller skates.. on concrete: 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sFiBACVT4A8?rel=0" frameborder="0" allowfullscreen></iframe>
 
 That video is actually the only content here that was mine. In my last Fringe post I did say I would take more photos and videos but I have actually taken less. MUST TRY HARDER!
 
-Finally we ended the day with __The Heist__. There was some method behind this choice. It was advertised as a comedy theatre about a heist. This theme has played out many times in film, so I figured it should work just as well on the stage and boy did they deliver. The story was great, it was reminiscent of the original Casino Royal, mixing in absurdist characters and plot points but with the back drops of the vatican, suave ballrooms and super giant yachts. Even the main antagonist was called Antonio Superyacht and had the classical trappings of a comedic megalomaniac. This could easily be the best plays I have seen in a long time. Finally the ingenuity of how they made the scenes come alive with just minimal plot devices was astounding. Some of the cast in one scene played statues that actually moved as if they were a rolling background and others held red string like a scene from Entrapment. The music was just fitting adding that crime-noir style ragtime element, just to give it that little bit of vintage class. The trailer for the show is just a small part of some of the great set pieces: <iframe width="560" height="315" src="https://www.youtube.com/embed/vJu8rwhyD3Y?rel=0" frameborder="0" allowfullscreen></iframe> 
+Finally we ended the day with __The Heist__. There was some method behind this choice. It was advertised as a comedy theatre about a heist. This theme has played out many times in film, so I figured it should work just as well on the stage and boy did they deliver. The story was great, it was reminiscent of the original Casino Royal, mixing in absurdist characters and plot points but with the back drops of the vatican, suave ballrooms and super giant yachts. Even the main antagonist was called Antonio Superyacht and had the classical trappings of a comedic megalomaniac. This could easily be the best plays I have seen in a long time. Finally the ingenuity of how they made the scenes come alive with just minimal plot devices was astounding. Some of the cast in one scene played statues that actually moved as if they were a rolling background and others held red string like a scene from Entrapment. The music was just fitting adding that crime-noir style ragtime element, just to give it that little bit of vintage class. The trailer for the show is just a small part of some of the great set pieces: 
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/vJu8rwhyD3Y?rel=0" frameborder="0" allowfullscreen></iframe> 
 
 Cultural Saturday
 -------------------
