--- a/_drafts/2015-12-31-end-of-year-2015.md
+++ b/_drafts/2015-12-31-end-of-year-2015.md
@@ -7,3 +7,20 @@ comments: True
 That was 2015 and what a busy year it has been (still just as amazing).
 
 ### Let's begin...
+
+The year started off with a bang. The washing machine broke. I found out a colleague was secretly a famous DJ. Elite Dangerous was taking up a lot of gaming time. This was going to get better.
+
+I always write these with chronology in mind, basically because I'm gong through my calendar as I write this. That's rubbishy though as this would end up being a glorified list with my trying to review tweets from January. Hmmm let's try sections!
+
+## Job
+The biggest thing this year for me was moving jobs. Considering I've been in my last one for nearly 4 years and the market has completely changed, hell I've even got a different skill set. This was going to be a arduous task. 
+
+Luckily I had some really good help, my housemate and good friend is in recruitment. He helped a lot, I quickly got accustomed on how to interact with recruiters. How to leverage the best position and promote yourself, so they can put you across in the way you want.
+
+The other side to this is the market in IT. 4 years ago I was struggling to find job specs that wanted the experience I had. Now? I didn't even have a chance to apply, I was immediately inundated with calls and email straight out of the bat. I was seemingly the prefect candidate for most jobs. 
+I learned a few things here. Get burners: Create a temporary email address and get another SIM card. I think the IT industry was a special case here but I was just not prepared for the amount of calls and messages I was going to receive. Even now after pulling my CV down from the job sites (yes I checked twice) I'm still getting calls. The recruitment industry is just crazy, they will hound you down until every last drop of blood is taken. I'm just reminded of a cattle market.
+
+I was sad to leave my old company, especially the people I worked with. On the hand there was just no opportunity to push yourself and the industry I was working for didn't allow creativity or passion. It was insurance after all. I moved to a consultancy and now it's much better work, working on new projects  a few times a year (if you are lucky). The pay has to be addressed as well, most programmers probably don't mind as much as other professionals and maybe I was just ignorant about it. I was really underpaid in my last job, even with one recruiting claiming my pay rise to my new job was the biggest she's ever seen. I do feel I am now getting what I deserve in terms of work.
+
+## Hobbies
+This is becoming another big year for my other "work". The Manchester Space Programme is turning into a mature organisation. We have managed to secure private funding
