Formatted link to markdown style

--- a/_posts/2016-01-01-plans-for-2016.md
+++ b/_posts/2016-01-01-plans-for-2016.md
@@ -13,7 +13,7 @@ Most people go crazy with resolutions. One guy over New Years' made 17! I think 
 1. Read more books. Mark Zuckerberg claimed to have read 2 a month. That seems like a good target.
 2. Learn to ski (properly). I have started this already but I want to get good and I've barely had any lessons.
 3. Learn Spanish. I am planning a Cuba trip soon. I have also signed up for Spanish lesson starting this month, so that should kickstart me.
-4. Measure my achievements. I heard about this over New Years: the act of just trying to measure goals will actually improve how you reach them. A bit like this guy http://blog.fogus.me/2015/12/29/the-best-things-and-stuff-of-2015/
+4. Measure my achievements. I heard about this over New Years: the act of just trying to measure goals will actually improve how you reach them. A bit like [this guy](http://blog.fogus.me/2015/12/29/the-best-things-and-stuff-of-2015/)
 5. Upgrade all the things. I have come into more disposableincome, so time to buy things that are smaller and better.
 
 
