Amended new years post with health kick

--- a/_posts/2016-01-01-plans-for-2016.md
+++ b/_posts/2016-01-01-plans-for-2016.md
@@ -4,21 +4,22 @@ title: Plans for 2016
 comments: True
 ---
 
-I just want to pen down some aims for 2016 and see where I get to.
+### Plans for 2016
 
-### Keeping it simple
+I just want to pen down some aims for 2016 and see where I get to.
 
 Most people go crazy with resolutions. One guy over New Years' made 17! I think that's a bit crazy, so I am keeping to a simple, short list.
 
 1. Read more books. Mark Zuckerberg claimed to have read 2 a month. That seems like a good target.
 2. Learn to ski (properly). I have started this already but I want to get good and I've barely had any lessons.
-3. Learn Spanish. I am planning a Cuba trip soon. I have also signed up for Spanish lesson starting this month, so that should kickstart me.
-4. Measure my achievements. I heard about this over New Years: the act of just trying to measure goals will actually improve how you reach them. A bit like [this guy](http://blog.fogus.me/2015/12/29/the-best-things-and-stuff-of-2015/)
-5. Upgrade all the things. I have come into more disposableincome, so time to buy things that are smaller and better.
+3. Learn Spanish. I am planning a Cuba trip soon. I have also signed up for Spanish lessons starting this month. Duolingo shoud also augment this.
+4. Measure my achievements. I heard about this over New Years: the act of just trying to measure goals will actually improve how you reach them. Hopefully end up making a list like [this guy](http://blog.fogus.me/2015/12/29/the-best-things-and-stuff-of-2015/)
+5. Upgrade all the things. I have more disposable income, so time to buy the same things but smaller and better.
+6. Improve health. More specifically train myself to stop getting any more back pain, which has been up and down last year.
 
 
 This is also about doing less of things:
 
-1. Less martial arts. Yep, this was low on my list but I still keep going sporadically. I think it is time to dump the martial art side of my training and stick to fitness.
+1. Less martial arts. Yep, this was low on my list but I still keep going sporadically. I think it is time to dump the martial art side of my training and stick to fitness and core exercises.
 2. Less TV shows. Again this was slipping already but still managed a few seasons of House Of Cards and started on Red Dwarf. Now moving to just a few mini-series, like Sherlock or Luther.
-3. Reduce my ownership footprint. Last time I checked I owned about two cars worth of stuff, time to get that down to one car. 
+3. Reduce my ownership footprint. Last time I checked I owned about two cars worth of stuff, time to get that down to one car.
