Big commit for theme change, going dark

--- a/_posts/2016-08-23-wall-map.md
+++ b/_posts/2016-08-23-wall-map.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title: Wall Map
-featured_image: '/images/demo/demo-square.jpg'
+date: 2016-08-23
+image: /assets/wallmap_dot.jpg
 comments: True
 ---
 
